package com.kna.vstay.payment;

public interface PaymentStrategy {
}
