package com.kna.vstay.payment;

public class VNPayPaymentStrategy implements PaymentStrategy {
}
